flux/apps/base/mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-mqtts
  namespace: mosquitto
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mosquitto
  ports:
    - name: mqtts
      port: 8883
      targetPort: 8883
      protocol: TCP
