flux/apps/base/mosquitto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  ingressClassName: nginx
